2010-10-09  Cyril Robert <cyrilrbt@gmail.com>

	* All files: Made PEP8 compliant 

2010-10-04  Olivier Larchevêque <olivier.larcheveque@gmail.com>

    * caldav/davclient.py (DAVClient.request): fix headers merge before sending request
    * caldav/objects.py (Event.__init__): fix for respecting davobject signature

2010-07-15  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/davclient.py (DAVClient.__init__): Fixed an issue with usernames
	that contain a '@'.
	Thanks to the reporter of issue #2

2010-07-07  Mark Meyer  <ofosos@gmail.com>

	* caldav/elements/cdav.py: Add Calendar, representing the calendar
	resource type.
	* caldav/objects.py (DAVObject.children): Pull in code from
	_get_properties to enable PROPFINDs for properties with complex
	values.
	* caldav/objects.py (DAVObject.properties): Add a warning message.
	* caldav/objects.py (Principal.calendars): retrieve only child
	collections that have a cdav.Calendar property.
	
2010-07-06  Mark Meyer  <ofosos@gmail.com>

	* caldav/objects.py (DAVObject.save): Use idiomatic
	NotImplementedError and add a docstring
	* caldav/davclient.py (DAVObject.request): raise error on a http
	unauthorized (400) condition.

2010-07-06  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/elements/base.py (BaseElement.__add__): Removed unnecessary
	verification.
	* caldav/objects.py: Merged all methods from caldav.lib.commands.
	* caldav/commands.py: Removed, no longer needed.

2010-07-05  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/lib/commands.py (date_search): Fixed a typo.
	* caldav/lib/error.py (AuthorizationError): Added AuthorizationError.
	* caldav/davclient.py (DAVClient.request): Added 403 error handling.
	* caldav/davclient.py (DAVClient.__init__): Always pass proper Content-Type
	and Accept headers to the server. This is required by at least davical.
	Thanks to http://bitbucket.org/ofosos (all of the above)

2010-07-02  Cyril Robert <cyrilrbt@gmail.com>
